removed: spelled out GLI

--- a/review1_drones2026-02/drones-4134001-done-x_version1/drones-4134001-done.tex
+++ b/review1_drones2026-02/drones-4134001-done-x_version1/drones-4134001-done.tex
@@ -390,7 +390,7 @@ If we apply the same procedure to other images of tobacco leaves, we can then co
 \begin{figure}[H]
 %    \centering
     \includegraphics[width=0.95\linewidth]{figs/gli_histograms.png}
-    \caption{Distribution of values for the vegetation index GLI (Green Leaf Index) for: A) the tobacco leaves image; and B) for the barley field plot image}.
+    \caption{Distribution of values for the vegetation index GLI for: A) the tobacco leaves image; and B) for the barley field plot image}.
     \label{fig:gli}
 \end{figure}
 
